用户主页完善, 网页部分样式修改

--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
 
 {% endblock %}
 <footer class="footer">
-  <p class="text-center text-muted">taoing的知乎儿</p>
+  <p class="text-center text-muted">&copy;taoing的知乎儿</p>
   <p class="text-right"><a href="#">回到顶部</a></p>
 </footer>
 
