--- a/templates/zhihu/topic_list.html
+++ b/templates/zhihu/topic_list.html
@@ -17,7 +17,7 @@
 
         <div class="user-topic">
         {% for topic in request.user.topic_set.all %}
-          <a href="{% url 'topic-detail' topic.id %}"><button class="btn btn-default" type="button">{{ topic.name }}</button></a>
+          <a href="{% url 'topic_detail' topic.id %}"><button class="btn btn-default" type="button">{{ topic.name }}</button></a>
         {% empty %}
         <p>暂时没有关注话题</p>
         {% endfor %}
@@ -31,7 +31,7 @@
             <div class="meida">
               <a href="{% url 'topic_detail' topic.id %}" class="media-left"><img src="" alt="话题" class="media-object"></a>
               <div class="media-body">
-                <h4 class="media-heading"><a href="{% url 'topic_detail' topic.id %}">{{ topic.name }}</a> <span class="topic-follow text-muted"><a href="{% url 'topic_detail' topic.id %}">关注</a></span></h4>
+                <h4 class="media-heading"><a href="{% url 'topic_detail' topic.id %}">{{ topic.name }}</a> <span class="text-muted right-info"><a href="{% url 'topic_detail' topic.id %}">关注</a></span></h4>
                 <p>{{ topic.description|default_if_none:"话题暂时没有描述" }}</p>
               </div>
             </div>
@@ -52,8 +52,8 @@
         <div class="media">
           <a href="{% url 'topic_detail' topic.id %}" class="media-left"><img src="" alt="话题" class="media-object"></a>
           <div class="media-body">
-            <h4 class="media-heading"><a href="{% url 'topic_detail' topic.id %}">{{ topic.name }}</a></h4>
-            <p>{{ topic.user_nums }} 人关注</p>
+            <a href="{% url 'topic_detail' topic.id %}"><p>{{ topic.name }}</p></a>
+            <p class="text-muted">{{ topic.user_nums }} 人关注</p>
           </div>
         </div>
         <hr>
