--- a/static/css/zhihu.css
+++ b/static/css/zhihu.css
@@ -10,11 +10,13 @@ body {
 
 .header-box {
     font-size: 16px;
-    color: #1a1a1a;
     background: #ffffff;
     margin-bottom: 10px;
     box-shadow: 0 3px 5px rgba(0,0,0,0.1);
 }
+    .header-box a {
+        color: #1a1a1a;
+    }
 
 .site-box {
     padding: 20px;
@@ -24,17 +26,45 @@ body {
     box-shadow: 0 3px 5px rgba(0,0,0,0.1);
 }
 
+.right-block {
+    padding: 20px 60px;
+}
+    .right-block .btn {
+        margin-top: 20px;
+    }
+
+.media-heading {
+    font-size: 18px;
+    font-weight: 600;
+}
+h4 {
+    font-size: 15px;
+    font-weight: 600;
+}
+
 .question-item, .answer-item {
     padding: 20px;
 }
 
 .question-title {
+    font-size: 18px;
+    font-weight: 600;
+    color: #1a1a1a;
+}
 
+h3 {
+    font-size: 18px;
+    font-weight: 600;
+    color: #1a1a1a;
 }
 
 .question-meta, .answer-meta {
     margin: 5px 0 20px 0;
     font-size: 14px;
+}
+
+.btn {
+    margin: 0 5px;
 }
 
 .answer-content a {
@@ -43,7 +73,33 @@ body {
 
 p {
     letter-spacing: 1px;
+    line-height: 1.67;
+    font-size: 14px;
 }
+
+.right-info {
+    font-size: 14px;
+    color: #999;
+    font-weight: 400;
+    float: right;
+}
+
+h3.big-topic {
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.rightdes-num {
+    font-size: 18px;
+    font-weight: 600;
+    margin-left: 20px;
+}
+
+.header-bar {
+    font-size: 16px;
+    font-weight: 600;
+}
+
 
 .strong {
     font-weight: bold;
