--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,8 @@
   <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
   <link href="{% static 'css/zhihu.css' %}" rel="stylesheet">
+  <!-- 下拉菜单样式 -->
+  <link href="{% static 'css/bootstrap-select.min.css' %}" rel="stylesheet">
 
   <!--[if lt IE 9]>
     <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -19,6 +21,8 @@
 
   <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <!-- 下拉菜单js -->
+  <script src="{% static 'js/bootstrap-select.min.js' %}"></script>
 
 </head>
 <body>
