--- a/templates/zhihu/index.html
+++ b/templates/zhihu/index.html
@@ -18,7 +18,7 @@
       <div class="header-box">
       <div class="container">
         <ul class="nav navbar-nav">
-          <li><a href="">提问</a></li>
+          <li><a href="{% url 'ask_question' %}" target="_blank">提问</a></li>
           <li><a href="">回答</a></li>
           <li><a href="">写文章</a></li>
           <li><a href="">写想法</a></li>
@@ -97,5 +97,30 @@
 
   </div>
 </div>
+
+<!--模态框-->
+<div class="modal fade" id="question-submit" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button class="close" type="button" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title" id="question-label">写下你的问题</h4>
+        <p class="text-muted">描述精确的问题更易得到解答</p>
+      </div>
+      <div class="modal-body">
+        <form action="">
+          {% csrf_token %}
+          <input type="text" name="title" palceholder="写下你的问题">
+          <input type="submit" value="提交问题">
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-default" data-dismiss="modal">关闭</button>
+        <button class="btn btn-primary">提交问题</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 {% endblock %}
