--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,7 @@
   <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
   <link href="{% static 'css/zhihu.css' %}" rel="stylesheet">
-  <!-- 下拉菜单样式 -->
-  <link href="{% static 'css/bootstrap-select.min.css' %}" rel="stylesheet">
+  {% block custom_css %}{% endblock %}
 
   <!--[if lt IE 9]>
     <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -21,8 +20,7 @@
 
   <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <!-- 下拉菜单js -->
-  <script src="{% static 'js/bootstrap-select.min.js' %}"></script>
+  {% block custom_js %}{% endblock %}
 
 </head>
 <body>
@@ -51,7 +49,6 @@
         <button type="submit" class="btn btn-default">搜索</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="">登录/注册</a></li>
         {% if request.user.is_authenticated %}
         <li class="dropdown">
           <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button">{{ request.user.username }}
@@ -61,6 +58,9 @@
             <li><a href="{% url 'user_logout' %}">退出登录</a></li>
           </ul>
         </li>
+        {% else %}
+        <li><a href="{% url 'user_login' %}">登录</a></li>
+        <li><a href="{% url 'register' %}">注册</a></li>
         {% endif %}
       </ul>
     </div>
@@ -71,9 +71,6 @@
 
 {% endblock %}
 
-{% block custom_js %}
-
-{% endblock %}
 <footer class="footer">
   <p class="text-center text-muted">&copy;taoing的知乎儿</p>
   <p class="text-right"><a href="#">回到顶部</a></p>
