--- a/templates/user/user_question.html
+++ b/templates/user/user_question.html
@@ -5,7 +5,7 @@
 <h4>{% if user == request.user %}我的提问{% else %}他的提问{% endif %}</h4>
 <hr>
 
-{% for question in user_questions %}
+{% for question in user_questions_page %}
 <div class="trend-item">
   <a href="{% url 'question_detail' question.id %}"><h3>{{ question.title }}</h3></a>
   <p class="text-muted">{{ question.pub_time|date:'Y-m-d' }} &middot; {{ question.get_answer_nums }} 个回答 &middot; {{ question.get_follow_nums }} 个关注</p>
@@ -15,5 +15,7 @@
 </div>
 <hr>
 {% endfor %}
+
+{% include 'zhihu/paginator.html' with page=user_questions_page %}
 
 {% endblock %}
