--- a/templates/zhihu/answer_detail.html
+++ b/templates/zhihu/answer_detail.html
@@ -13,16 +13,25 @@
     <div class="col-sm-8">
       <div class="site-box">
         <div class="answer-item">
+          {% if answer.is_anonymous %}
           <div class="media">
-            <a href="" class="media-left"><img src="" alt="头像" class="media-object"></a>
+            <div class="media-left"><img src="" alt="头像" class="media-object"></div>
             <div class="media-body">
-              <h4 class="media-heading">{{ answer.author.username }}</h4>
-              <p>一点示例文本, 一点示例文本</p>
+              <h4 class="media-heading text-muted">匿名回答</h4>
             </div>
           </div>
+          {% else %}
+          <div class="media">
+            <a href="{% url 'user_home' answer.author_id %}" class="media-left"><img src="" alt="头像" class="media-object"></a>
+            <div class="media-body">
+              <h4 class="media-heading"><a href="{% url 'user_home' answer.author_id %}">{{ answer.author.username }}</a></h4>
+              <p class="text-muted">{{ answer.author.description }}</p>
+            </div>
+          </div>
+          {% endif %}
           <p class="text-muted">{{ answer.get_follow_nums }} 人赞同了该回答</p>
           <p>
-            {{ answer.content }}
+            {{ answer.content|safe }}
           </p>
           <p class="text-muted">编辑于 {{ answer.pub_time }}</p>
           <div class="answer-meta">
@@ -51,9 +60,8 @@
 
         {% for comment in page.object_list %}
           <div class="media">
-            <a href="" class="meida-left"><img src="" alt="头像" class="media-object"></a>
-            <div class="media-body"><h4 class="media-heading">{{ comment.user.nickname }}</h4></div>
-            <div class="pull-right text-muted"><small>{{ comment.add_time }}</small></div>
+            <a href="" class="media-left"><img src="" alt="头像" class="media-object"></a>
+            <div class="media-body"><h4 class="media-heading">{{ comment.user.nickname }}<span class="right-info">{{ comment.add_time }}</span></h4></div>
           </div>
           <p>{{ comment.comment }}</p>
           <hr>
