--- a/templates/zhihu/index.html
+++ b/templates/zhihu/index.html
@@ -19,7 +19,7 @@
       <div class="container">
         <ul class="nav navbar-nav">
           <li><a href="{% url 'ask_question' %}" target="_blank">提问</a></li>
-          <li><a href="">回答</a></li>
+          <li><a href="{% url 'question_list' %}" target="_blank">回答</a></li>
           <li><a href="">写文章</a></li>
           <li><a href="">写想法</a></li>
         </ul>
@@ -29,24 +29,33 @@
       {% for answer in page.object_list %}
           <div class="answer-item site-box">
             <p class="text-muted">来自话题:{{ answer.question.get_topic_name }}</p>
+            {% if answer.is_anonymous %}
             <div class="media">
-              <a href="" class="media-left"><img width="24px" src="{{ MEDIA_URL }}{{ answer.author.image }}" alt="头像" class="media-object"></a>
+              <div class="media-left"><img width="24px" src="{{ MEDIA_URL }}image/default_user.png" alt="头像" class="media-object"></div>
               <div class="media-body">
-                <h4 class="media-heading">{{ answer.author.nickname }}<small>, {{ answer.author.description }}</small></h4>
+                <h4 class="media-heading text-muted">匿名回答</h4>
               </div>
             </div>
+            {% else %}
+            <div class="media">
+              <a href="{% url 'user_home' answer.author_id %}" class="media-left"><img width="24px" src="{{ MEDIA_URL }}{{ answer.author.image }}" alt="头像" class="media-object"></a>
+              <div class="media-body">
+                <h4 class="media-heading"><a href="{% url 'user_home' answer.author_id %}">{{ answer.author.nickname }}</a><small>, {{ answer.author.description }}</small></h4>
+              </div>
+            </div>
+            {% endif %}
             <div class="question-title">
-                <a href="{% url 'question_detail' answer.question_id %}"><h3>{{ answer.question.title }}</h3></a>
+                <h3><a href="{% url 'question_detail' answer.question_id %}">{{ answer.question.title }}</a></h3>
             </div>
             <div class="answer-content">
-                <a href="{% url 'answer_detail' answer.id %}"><p>{{ answer.content|truncatechars:200|safe }}</p></a>
+                <a href="{% url 'answer_detail' answer.id %}"><p>{{ answer.content|striptags|truncatechars:200 }}</p></a>
             </div>
             <div class="answer-meta">
-              <a href="{% url 'answer_detail' answer.id %}"<button type="button" class="btn btn-primary btnvote-up"><span class="glyphicon glyphicon-triangle-top"></span> {{ answer.follow_nums }}</button></a>
-              <a href="{% url 'answer_detail' answer.id %}"<button type="button" class="btn btn-default btnvote-down"><span class="glyphicon glyphicon-triangle-bottom"></span></button></a>
-              <a href="{% url 'answer_detail' answer.id %}"><button type="button" class="btn btn-default">{{ answer.comment_nums }} 条评论</button></a>
-              <a href="{% url 'answer_detail' answer.id %}"<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-star"></span>收藏</button></a>
-              <span>{{ answer.pub_time }}</span>        
+              <a href="{% url 'answer_detail' answer.id %}"<button type="button" class="btn btn-primary btnvote-up btn-sm"><span class="glyphicon glyphicon-triangle-top"></span> {{ answer.follow_nums }}</button></a>
+              <a href="{% url 'answer_detail' answer.id %}"<button type="button" class="btn btn-default btnvote-down btn-sm"><span class="glyphicon glyphicon-triangle-bottom"></span></button></a>
+              <a href="{% url 'answer_detail' answer.id %}"><button type="button" class="btn btn-default btn-sm">{{ answer.comment_nums }} 条评论</button></a>
+              <a href="{% url 'answer_detail' answer.id %}"<button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-star"></span>收藏</button></a>
+              <span class="text-muted"><small>{{ answer.pub_time }}</small></span>        
             </div>
             
           </div>
