--- a/templates/zhihu/paginator.html
+++ b/templates/zhihu/paginator.html
@@ -4,14 +4,14 @@
     <li><a href="?page={{ page.previous_page_number }}">上一页</a></li>
     {% endif %}
     {% for page_number in page.page_range_ex %}
-      {% if page %}
+      {% if page_number %}
         {% if page_number == page.number %}
         <li class="active"><a href="?page={{ page_number }}">{{ page_number }}</a></li>
         {% else %}
         <li><a href="?page={{ page_number }}">{{ page_number }}</a></li>
         {% endif %}
       {% else %}
-        <li><a href="">...</a></li>
+        <li><a href="javascript:;">...</a></li>
       {% endif %}
     {% endfor %}
     {% if page.has_next %}
