--- a/templates/zhihu/topic_detail.html
+++ b/templates/zhihu/topic_detail.html
@@ -39,7 +39,7 @@
             </div>
           </div>
           <div class="answer-content">
-            <a href="{% url 'answer_detail' answer.id %}"><p>{{ answer.content|truncatechars:200|safe }}</p></a>
+            <a href="{% url 'answer_detail' answer.id %}"><p>{{ answer.content|striptags|truncatechars:200 }}</p></a>
           </div>
           <div class="answer-meta">
             <a href=""><button type="button" class="btn btn-primary btnvote-up"><span class="glyphicon glyphicon-triangle-top"></span> {{ answer.follow_nums }}</button></a>
